[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bumpy"
version = "0.0.4"
authors = [
  { name="David Hebert", email="david@ddhebert.com" },
]
description = "Bump and change package version numbers."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Version Control",
  "Topic :: Utilities",
]
keywords = [
  'bump',
  'semantic',
  'versioning',
  'version'
]
dependencies = [
]

[project.scripts]
bumpy = "bumpy.cli:main"

[project.urls]
"repository" = "https://github.com/dd-hebert/bumpy"
"bug tracker" = "https://github.com/dd-hebert/bumpy/issues"